# xdgdir

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs
tests/: integration.rs  printdirs.rs
